--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ application.yml
 application-API-KEY.properties
 !**/src/main/**/out/
 !**/src/test/**/out/
-
+!**/src/main/**/data/
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
